--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>802</width>
-    <height>337</height>
+    <height>332</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
    <enum>Qt::DefaultContextMenu</enum>
   </property>
   <property name="windowTitle">
-   <string>Text Encrypter</string>
+   <string>Secure Text Encryption</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget_2">
    <property name="geometry">
@@ -61,6 +61,19 @@
       </property>
       <property name="placeholderText">
        <string>[Cryptographic Key]</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="Line" name="line2">
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
